# samples

./: .gitattributes  .gitignore  LICENSE  README.md  README.rst
android/Android_Me-TFragments.07-Solution-TwoPaneUI/: README.md
android/AskQuestion/: build.gradle  settings.gradle
android/MyJetComposePlayground/: settings.gradle
android/MyPlaygroundInJava/: build.gradle
android/cheesefinder-starter/: README.md  build.gradle
android/onmyway/: LICENSE  README.rst
app-scripts/common-macros/: docs-management.gs  sheets-management.gs
app-scripts/investing-event-log/: add_link_with_title.gs
app-scripts/stocks-watch/: short-term-trading-triggers.gs  stocks-watch.gs
c/: killpg.c
dart/: .gitignore
dart/SampleAngularDartWebApp/: .gitignore  README.md  pubspec.yaml
dart/angular_tour_of_heroes/: README.md  pubspec.yaml
data-science/pythonproj1/: Pipfile  data-science-from-scratch.ipynb  intro_to_pandas.py  sample.py  starter.ipynb
gcp/movefast/: movefast.py
gcp/python-google-cloud-sql-on-app-engine/: helloworld.py
go/: README.md
go/base/: base.go
go/chainofios/: chainofios.go
html/: html5_base.html
python/: basic_server_using_socket.py  cherrypy_web_server.py  func_with_test.py  playground_script.py  script_template.py  script_with_simple_logging_template.py  script_with_subparsers_template.py  send_email.py  simple_no_logging_script_template.py  web_client.py
rust/rust-playground/: .gitignore  Cargo.toml  README.md
rust/rust-playground/src/: extra_module.rs  lib.rs  main.rs
rust/rust-playground/src/my_prog/: my_prog.rs
(+1260 files in other folders)
