[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# from https://doc.rust-lang.org/book/ch02-00-guessing-game-tutorial.html
# "0.8.3" is a shorthand for "^0.8.3". It means at least "0.8.3" but below
# "0.9.0". It's semantic versioning: http://semver.org/
rand = "0.8.3"
